ACQ-128 Fix the double borders of tabs on call center patient page

--- a/app/containers/CallCenterPatientPage/styles.less
+++ b/app/containers/CallCenterPatientPage/styles.less
@@ -43,6 +43,8 @@
       flex: 1;
 
       .carousel-indicators {
+        border: none;
+        border-bottom: #f78e1e solid 2px;
         li {
           width: 50%;
         }
@@ -68,6 +70,8 @@
       border: 2px solid #f78e1e;
 
       .carousel-indicators {
+        border: none;
+        border-bottom: #f78e1e solid 2px;
         li {
           width: 25%;
         }
